# smol-vergen

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: commit.yml
cargo/: Cargo.toml
cargo-impl/: Cargo.toml
core/: Cargo.toml
core/src/: cargo_logger.rs  lib.rs  value.rs
example-project/: Cargo.toml  build.rs
example-project/src/: main.rs
git/: Cargo.toml  README.md
git/src/: cli_access.rs  failed_access.rs  gitoxide_access.rs  lib.rs  native_git_access.rs
smol-vergen-getter/: Cargo.toml
src/: lib.rs  serialize_to_env.rs
src/serialize_to_env/: macros.rs  ser_map.rs  ser_map_key.rs  ser_struct.rs  tests.rs
sys-info/: Cargo.toml
