[package]
name = "example-project"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@gmail.com>"]
repository = "https://github.com/wyatt-herkamp/smol-vergen"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[build-dependencies]
smol-vergen = { path = "../" }
smol-vergen-git = { path = "../git" }
smol-vergen-cargo = { path = "../cargo-impl" }
