[package]
name = "sys-info"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
chrono.workspace = true
smol-vergen-core = { path = "../core" }
anyhow.workspace = true
serde.workspace = true
derive_builder.workspace = true
